Ajustes para slider completo y sin mochadas

--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@ document.oncontextmenu = function(){return false;}
     <link href="css/responsive.css" rel="stylesheet">
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
     <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
+    <style>
+        .tp-simpleresponsive img{
+            max-width: 100%;
+            height: auto;
+        }
+        .tp-bgimg.defaultimg{
+            background-size: contain !important;
+            /*background-position: center !important;*/
+        }
+    </style>
 </head>
 
 <body>
@@ -287,7 +297,7 @@ document.oncontextmenu = function(){return false;}
                     <ul>
 
                         <li data-transition="slidingoverlayleft" data-slotamount="1" data-masterspeed="1000" data-thumb="images/main-slider/1.jpg" data-saveperformance="off" data-title="Awesome Title Here">
-                            <img src="images/main-slider/Portada.png" alt="" data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
+                            <img src="images/main-slider/Portada.png" alt="" data-bgposition="center top" data-bgfit="contain" data-bgrepeat="no-repeat">
 
                             <div class="tp-caption sfl sfb tp-resizeme" data-x="left" data-hoffset="30" data-y="center" data-voffset="-120" data-speed="1500" data-start="0" data-easing="easeOutExpo" data-splitin="none" data-splitout="none" data-elementdelay="0.01" data-endelementdelay="0.3" data-endspeed="1200" data-endeasing="Power4.easeIn">
                                 <div class="italic-text"></div>
@@ -301,13 +311,13 @@ document.oncontextmenu = function(){return false;}
                                 <div class="italic-text"></div>
                             </div>
 
-                            <div class="tp-caption sfr sfb tp-resizeme" data-x="left" data-hoffset="30" data-y="center" data-voffset="110" data-speed="1500" data-start="1000" data-easing="easeOutExpo" data-splitin="none" data-splitout="none" data-elementdelay="0.01" data-endelementdelay="0.3" data-endspeed="1200" data-endeasing="Power4.easeIn"><a href="#" <span </span></a><a href="#" 
+                            <div class="tp-caption sfr sfb tp-resizeme" data-x="left" data-hoffset="30" data-y="center" data-voffset="110" data-speed="1500" data-start="1000" data-easing="easeOutExpo" data-splitin="none" data-splitout="none" data-elementdelay="0.01" data-endelementdelay="0.3" data-endspeed="1200" data-endeasing="Power4.easeIn"> 
                             </div>
 
                         </li>
 
                         <li data-transition="slidingoverlayleft" data-slotamount="1" data-masterspeed="1000" data-thumb="images/main-slider/2.jpg" data-saveperformance="off" data-title="Awesome Title Here">
-                            <img src="images/main-slider/2.jpg" alt="" data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
+                            <img src="images/main-slider/2.jpg" alt="" data-bgposition="center top" data-bgfit="contain" data-bgrepeat="no-repeat">
 
                             <div class="tp-caption sfl sfb tp-resizeme" data-x="right" data-hoffset="-20" data-y="center" data-voffset="-120" data-speed="1500" data-start="0" data-easing="easeOutExpo" data-splitin="none" data-splitout="none" data-elementdelay="0.01" data-endelementdelay="0.3" data-endspeed="1200" data-endeasing="Power4.easeIn">
                                 <div class="italic-text">Bienvenido a Bosch Car Service Monterrey</div>
@@ -325,16 +335,16 @@ document.oncontextmenu = function(){return false;}
                                 <div class="italic-text">"Nuestra amor por los autos y el servicio son nuestro motor"</div>
                             </div>
 
-                            <div class="tp-caption sfr sfb tp-resizeme" data-x="right" data-hoffset="-20" data-y="center" data-voffset="105" data-speed="1500" data-start="1000" data-easing="easeOutExpo" data-splitin="none" data-splitout="none" data-elementdelay="0.01" data-endelementdelay="0.3" data-endspeed="1200" data-endeasing="Power4.easeIn"><a href="#" <span </span></a>
+                            <div class="tp-caption sfr sfb tp-resizeme" data-x="right" data-hoffset="-20" data-y="center" data-voffset="105" data-speed="1500" data-start="1000" data-easing="easeOutExpo" data-splitin="none" data-splitout="none" data-elementdelay="0.01" data-endelementdelay="0.3" data-endspeed="1200" data-endeasing="Power4.easeIn"><a href="#"></a>
                             </div>
 
-                            <div class="tp-caption sfr sfb tp-resizeme" data-x="right" data-hoffset="-275" data-y="center" data-voffset="105" data-speed="1500" data-start="1500" data-easing="easeOutExpo" data-splitin="none" data-splitout="none" data-elementdelay="0.01" data-endelementdelay="0.3" data-endspeed="1200" data-endeasing="Power4.easeIn"><a href="#" </a>
+                            <div class="tp-caption sfr sfb tp-resizeme" data-x="right" data-hoffset="-275" data-y="center" data-voffset="105" data-speed="1500" data-start="1500" data-easing="easeOutExpo" data-splitin="none" data-splitout="none" data-elementdelay="0.01" data-endelementdelay="0.3" data-endspeed="1200" data-endeasing="Power4.easeIn"><a href="#"></a>
                             </div>
 
                         </li>
 
                         <li data-transition="slidingoverlayleft" data-slotamount="1" data-masterspeed="1000" data-thumb="images/main-slider/3.jpg" data-saveperformance="off" data-title="Awesome Title Here">
-                            <img src="images/main-slider/3.jpg" alt="" data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
+                            <img src="images/main-slider/3.jpg" alt="" data-bgposition="center top" data-bgfit="contain" data-bgrepeat="no-repeat">
 
                             <div class="tp-caption sfl sfb tp-resizeme" data-x="center" data-hoffset="15" data-y="center" data-voffset="-120" data-speed="1500" data-start="0" data-easing="easeOutExpo" data-splitin="none" data-splitout="none" data-elementdelay="0.01" data-endelementdelay="0.3" data-endspeed="1200" data-endeasing="Power4.easeIn">
                                 <div class="italic-text">Bienvenido a Bosch Car Service Monterrey</div>
@@ -352,7 +362,7 @@ document.oncontextmenu = function(){return false;}
                                 <div class="italic-text">"Comprometidos con el medio ambiente"</div>
                             </div>
 
-                            <div class="tp-caption sfr sfb tp-resizeme" data-x="center" data-hoffset="-70" data-y="center" data-voffset="105" data-speed="1500" data-start="1000" data-easing="easeOutExpo" data-splitin="none" data-splitout="none" data-elementdelay="0.01" data-endelementdelay="0.3" data-endspeed="1200" data-endeasing="Power4.easeIn"><a href="#" <span ></span></a>
+                            <div class="tp-caption sfr sfb tp-resizeme" data-x="center" data-hoffset="-70" data-y="center" data-voffset="105" data-speed="1500" data-start="1000" data-easing="easeOutExpo" data-splitin="none" data-splitout="none" data-elementdelay="0.01" data-endelementdelay="0.3" data-endspeed="1200" data-endeasing="Power4.easeIn"><a href="#"></a>
                             </div>
 
                             <div class="tp-caption sfr sfb tp-resizeme" data-x="center" data-hoffset="140" data-y="center" data-voffset="105" data-speed="1500" data-start="1500" data-easing="easeOutExpo" data-splitin="none" data-splitout="none" data-elementdelay="0.01" data-endelementdelay="0.3" data-endspeed="1200" data-endeasing="Power4.easeIn"><a href="#" </a>
